Avoid setAccessible for hotspot mbean
The implementation class is package private which requires
using `setAccessible(true)` and thus needs `--add-opens`.
Refactor to use the interface class to get the method so
it is only using the public APIs and will also work with
`--add-exports`.